--- a/src/client/app/layout/sidebar.html
+++ b/src/client/app/layout/sidebar.html
@@ -5,12 +5,11 @@
         <div class="sidebar-inner">
             <div class="sidebar-widget"></div>
             <ul class="navi">
-                <li class="nlightblue fade-selection-animation" ng-class="vm.isCurrent(r)"
-                    ng-repeat="r in vm.navRoutes">
-                    <a ui-sref="{{r.name}}"
-                       ng-bind-html="r.settings.content"></a>
+                <li class="nlightblue fade-selection-animation" ng-class="vm.isCurrent(r)" ng-repeat="r in vm.navRoutes">
+                    <a ui-sref="{{r.name}}" ng-bind-html="r.settings.content"></a>
                 </li>
             </ul>
         </div>
+
     </ht-sidebar>
 </div>
