interface testing mit netbeans
Signed-off-by:rogera <wolfgang.schuessel@gmail.com>

--- a/src/client/styles/styles.less
+++ b/src/client/styles/styles.less
@@ -712,7 +712,8 @@ form {
 
 /* Sidebar dropdown */
 
-    .sidebar .sidebar-dropdown* {
+    /* orig: .sidebar-dropdown* w/ asterisk ..for-some-reason? */
+    .sidebar .sidebar-dropdown {
         text-decoration: none;
     }
 
